--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+*.db
+jst.js
+.DS_Store
+prod.ini
+data/
+*.swo
+# web assets generated directory
+gen/
+.webassets-cache/
+
 *.py[co]
 
 # Packages
@@ -5,23 +15,31 @@
 *.egg-info
 dist
 build
+_build
 eggs
 parts
 bin
-var
-sdist
 develop-eggs
 .installed.cfg
 
 # Installer logs
 pip-log.txt
+logs
+*.log
+*.pid
 
 # Unit test / coverage reports
 .coverage
 .tox
 
-#Translations
-*.mo
+# Vim
+*.swp
+.rope*
 
-#Mr Developer
-.mr.developer.cfg
+# Tags for git-helpers
+tags
+
+nohup.out
+
+# Mac OS
+*.DS_Store*
